--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "axios": "^1.7.7",
+    "axios": "^1.7.8",
     "bootstrap": "^5.3.3",
-    "nuxt": "^3.14.159",
-    "pinia": "^2.2.6",
+    "nuxt": "^3.14.1592",
+    "pinia": "^2.2.7",
     "vue": "latest",
     "vue-router": "latest"
   },
   "devDependencies": {
-    "sass-embedded": "^1.81.0"
+    "@iconify/vue": "^4.1.2",
+    "sass": "^1.7.3",
+    "sass-embedded": "^1.79.6"
   }
 }
