--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "axios": "^1.7.8",
     "bootstrap": "^5.3.3",
     "nuxt": "^3.14.1592",
+    "nuxt-swiper": "^2.0.0",
     "pinia": "^2.2.7",
     "vue": "latest",
     "vue-router": "latest"
   },
   "devDependencies": {
     "@iconify/vue": "^4.1.2",
-    "sass": "^1.7.3",
-    "sass-embedded": "^1.79.6"
+    "sass": "^1.7.3"
   }
 }
