--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@vueuse/core": "^12.0.0",
     "axios": "^1.7.8",
     "bootstrap": "^5.3.3",
+    "date-fns": "^4.1.0",
     "nuxt": "^3.14.1592",
     "nuxt-swiper": "^2.0.0",
     "pinia": "^2.2.7",
+    "v-calendar": "^3.1.2",
     "vue": "latest",
     "vue-router": "latest"
   },
