--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@iconify/vue": "^4.1.2",
+    "@samk-dev/nuxt-vcalendar": "^1.0.4",
     "sass": "^1.7.3"
   }
 }
