--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "@vueuse/core": "^12.0.0",
+    "@vueuse/nuxt": "12.0.0",
     "axios": "^1.7.8",
     "bootstrap": "^5.3.3",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "nuxt": "^3.14.1592",
     "nuxt-swiper": "^2.0.0",
     "pinia": "^2.2.7",
